# xinput

./: Cargo.toml  License.md
src/: battery.rs  ffi.rs  lib.rs  main.rs  vibration.rs
src/battery/: mod.rs
src/input/: mod.rs
src/vibration/: mod.rs
